--- a/food_website.html
+++ b/food_website.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Online Food Delivery Service in India | MyOnlineMeal.com</title>
-    <link rel="stylesheet" href="food.css">
+    <link rel="stylesheet" href="food_website_style.css">
 </head>
 
 <body>
