--- a/Digital Clock/clock.html
+++ b/Digital Clock/clock.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diital Clock</title>
+    <title>Digital Clock</title>
     <link rel="stylesheet" href="clock.css">
 </head>
 <body>
